Bug 1798780, ensure we don't evict the current frameloader, r=peterv, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D163391